--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -9,24 +9,43 @@
     "dockerfile": "../Dockerfile"
   },
   // Features to add to the dev container. More info: https://containers.dev/features.
-  // "features": {},
-
-  // Use 'forwardPorts' to make a list of ports inside the container available locally.
-  // "forwardPorts": [],
-
-  // Use 'postCreateCommand' to run commands after the container is created.
-  // "postCreateCommand": "yarn install",
-
+  "features": {
+    // Microsoftが提供する一般的な開発ツールをインストールする公式Feature
+    "ghcr.io/devcontainers/features/common-utils:2": {
+      // Zshをインストールし、デフォルトのシェルにする
+      "installZsh": true,
+      // Oh My Zsh (ターミナルをリッチにするフレームワーク) をインストール
+      "installOhMyZsh": true,
+      // ユーザー名をvscodeから変更しない (デフォルトのまま)
+      "username": "vscode",
+      "userUid": "automatic",
+      "userGid": "automatic",
+      // Zshをデフォルトシェルとして設定
+      "configureZshAsDefaultShell": true
+    }
+  },
   // Configure tool-specific properties.
-  // VS Code / Cursorの設定
   "customizations": {
     "vscode": {
       // コンテナ内で自動的にインストールさせたい拡張機能
       "extensions": [
+        // --- 基本セット ---
         "dbaeumer.vscode-eslint",
         "esbenp.prettier-vscode",
         "bradlc.vscode-tailwindcss",
-        "github.vscode-github-actions"
+        // --- Git関連 (チームで統一) ---
+        "mhutchie.git-graph", // SourceTreeを表示
+        "donjayamanne.githistory", // ファイルのGit履歴を表示
+        // --- 開発効率化 ---
+        "github.vscode-github-actions", // GitHub Actionsのワークフローを支援
+        "gruntfuggly.todo-tree", // コード内のTODOコメントをツリー表示
+        "christian-kohler.npm-intellisense", // package.jsonのnpmモジュール名を補完
+        "christian-kohler.path-intellisense", // ファイルパスを補完
+        "oderwat.indent-rainbow", // インデントを色付けして見やすくする
+        "shardulm94.trailing-spaces", // 不要な末尾スペースを可視化・削除
+        // --- Markdown編集用 ---
+        "yzhang.markdown-all-in-one", // Markdown編集のオールインワンツール
+        "davidanson.vscode-markdownlint" // Markdownの品質をチェック
       ],
       // コンテナ内でのみ有効にしたい設定
       "settings": {
@@ -34,16 +53,14 @@
       }
     }
   },
-
   // ホストPCのポートをコンテナのポートに転送
-  "forwardPorts": [3000],
-
+  "forwardPorts": [
+    3000
+  ],
   // コンテナ作成後に一度だけ実行されるコマンド
   // "postCreateCommand": "npm install"
-
   // コンテナ起動時に毎回実行されるコマンド
   "postAttachCommand": "npm run dev"
-
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
   // "remoteUser": "root"
 }
