--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -56,7 +56,8 @@
   // コンテナ作成後に一度だけ実行されるコマンド
   "postCreateCommand": "npm install",
   // コンテナ起動時に毎回実行されるコマンド
-  "postAttachCommand": "npm run dev"
+  "postAttachCommand": "npm run dev",
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
   // "remoteUser": "root"
+  "remoteUser": "vscode"
 }
