devcontainer.json用のDockerfileをDockerfile.devに名前変更し、本番用のDockerfileを新規作成

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,7 @@
 {
   "name": "Next.js Dev Container",
   "build": {
-    "dockerfile": "../Dockerfile"
+    "dockerfile": "../Dockerfile.dev"
   },
   // Features to add to the dev container. More info: https://containers.dev/features.
   "features": {
