--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -58,9 +58,9 @@
   "postCreateCommand": "sudo chown -R vscode:vscode . || true && npm install",
   // コンテナ起動時に毎回実行されるコマンド
   "postAttachCommand": "npm run dev",
-  "containerEnv": {
-    "WATCHPACK_POLLING": "true"
-  },
+  // "containerEnv": {
+  //   "WATCHPACK_POLLING": "true"
+  // },
   // Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
   // "remoteUser": "root"
   "remoteUser": "vscode",
