docsをdevcontainer.jsonでマウントしないように設定、本番環境用のdockerignoreを新規設定

--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -70,12 +70,12 @@
       "source": "${localWorkspaceFolder}",
       "target": "${containerWorkspaceFolder}",
       "type": "bind"
-    },
-    {
-      "source": "${localWorkspaceFolder}/../papas-docs",
-      "target": "${containerWorkspaceFolder}/papas-docs",
-      "type": "bind"
     }
+    // {
+    //   "source": "${localWorkspaceFolder}/../papas-docs",
+    //   "target": "${containerWorkspaceFolder}/papas-docs",
+    //   "type": "bind"
+    // }
   ],
   // Gitのソース管理でdocsを表示させない設定
   "workspaceFolder": "/workspace"
