--- a/.dockerignore
+++ b/.dockerignore
@@ -1,9 +1,47 @@
-# Dockerイメージに含めたくないものを指定する
-# 開発用のnode_modulesはビルドコンテキストから除外する
+# Git Submodule (開発でのみ参照するドキュメント)
+docs/
+
+# ===================================================
+# Git関連 (リポジトリの履歴や設定はイメージに不要)
+# ===================================================
+.git
+.gitignore
+.gitattributes
+.gitmodules
+
+# ===================================================
+# Docker関連 (イメージ自体には不要なビルド用ファイル)
+# ===================================================
+Dockerfile
+Dockerfile.dev
+.dockerignore
+docker-compose.yml
+
+# ===================================================
+# 開発環境設定 (VS Code Dev Container用)
+# ===================================================
+.devcontainer/
+.vscode/
+
+# ===================================================
+# 依存関係とログ (コンテナ内でインストールするため不要)
+# ===================================================
 node_modules
-
-# Next.jsのビルド生成物も除外
-.next
-
-# その他
 npm-debug.log
+yarn-error.log
+
+# ===================================================
+# Next.jsのビルドキャッシュ (コンテナ内でビルドするため不要)
+# ===================================================
+.next/
+
+# ===================================================
+# ローカル環境変数 (本番環境変数は実行時に注入するのがベストプラクティス)
+# ===================================================
+.env.local
+.env.development.local
+
+# ===================================================
+# その他 (オプション)
+# ===================================================
+README.md
